[tool.poetry]
name = "power-supply-driver"
version = "0.1.0"
description = "Драйвер для работы с промышленным 4-х канальным источником питания"
authors = ["Vladislav <v.v.b.zhuravlev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.2.1"
uvicorn = "^0.23.2"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
setproctitle = "^1.3.3"
pydantic-core = "^2.20.1"
PyVISA = "^1.14.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
isort = "^5.12.0"
faker = "^19.3.1"
httpx = "^0.27.2"
pytest-asyncio = "^0.21.1"
black = "^24.2.0"
flake8 = "^6.1.0"
coverage = "^7.3.1"
bandit = "^1.7.7"
flake8-builtins = "^2.5.0"
flake8-commas = "^4.0.0"
flake8-comprehensions = "^3.14.0"
flake8-debugger = "^4.1.2"
flake8-eradicate = "^1.5.0"
flake8-isort = "^6.1.1"
flake8-pep3101 = "^2.1.0"
flake8-print = "^5.0.0"
flake8-quotes = "^3.4.0"
flake8-string-format = "^0.3.0"
flake8-super-call = "^1.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
skip = [".venv", "venv"]

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"